--- a/deployment.yaml
+++ b/deployment.yaml
@@ -27,8 +27,7 @@ metadata:
     app: "gateway"
 spec:
   ports:
-    - protocol: "TCP"
-      port: 80
-      targetPort: 80
+    - port: 80
+      nodePort: 13000
   selector:
     app: "gateway"
